force-app/main/default/objects/ProductEvent__c/ProductEvent__c.object-meta.xml
<CustomObject>
    <label>품목별 행사정보</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>