force-app/main/default/objects/ProductEvent__c/fields/EventCode__c.field-meta.xml
<CustomField>
    <fullName>EventCode__c</fullName>
    <displayFormat>EVT{YYYY}{00000}</displayFormat>
    <label>Event Code</label>
    <type>AutoNumber</type>
</CustomField>