force-app/main/default/objects/ProductEvent__c/fields/EventEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EventEndDateTime__c</fullName>
    <label>Event End DateTime</label>
    <type>DateTime</type>
</CustomField>