force-app/main/default/objects/ProductEvent__c/fields/EventStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>EventStartDateTime__c</fullName>
    <description>정보성</description>
    <label>Event Start DateTime</label>
    <type>DateTime</type>
</CustomField>