force-app/main/default/objects/ProductEvent__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <label>정기행사</label>
            </value>
            <value>
                <fullName>NewProduct</fullName>
                <label>신제품행사</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>기타</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>