force-app/main/default/objects/ProductEvent__c/fields/OrderEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>OrderEndDateTime__c</fullName>
    <label>Order End DateTime</label>
    <type>DateTime</type>
</CustomField>