force-app/main/default/objects/ProductEvent__c/fields/OrderStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>OrderStartDateTime__c</fullName>
    <description>발주저장시 반드시 체크해야함</description>
    <label>Order Start DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>