force-app/main/default/objects/ProductEvent__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <description>지정대리점은 GfAmsGoodsEventTarget__c에 기록</description>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>모든대리점</label>
            </value>
            <value>
                <fullName>Target</fullName>
                <label>지정대리점</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>